# psw-esp

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  device_registry.c  idf_component.yml  item_registry.h  main.c  my_bt.c  my_bt.h  password_registry.c  ui.c  ui.h  ui_styles.h
main/bt/: ble_hidd_demo_main.c  hid_dev.h  my_bt.c  my_bt.h
main/registry/: device_registry.c  item_registry.h  my_nvs.c  my_nvs.h  password_registry.c
main/system/: lcd_touch.c  lcd_touch.h  lvgl9to8.c  lvgl9to8.h  power_control.c  power_control.h  sd_card_bsp.c  touch_bsp.c
main/ui/: backup_dialog.c  battery_indicator.c  common.c  edit_password_dialog.c  keyboard.c  keyboard.h  pair_device_dialog.c  popup_menu.c  style.c  style.h  touch_test.c  ui.c  ui.h  ui_internal.h  ui_styles.h
